// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  disabled: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--disabled mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="" disabled="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="" disabled="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="" disabled="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="" disabled="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  helpText: 'Hello joker'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        Hello joker
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  inputVerticalList: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--vertical-list" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <strong></strong>
          <slot></slot>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--radio mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <strong></strong>
          <slot></slot>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true,
  disabled: true,
  helpText: 'My help text',
  value: 'batman'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--disabled mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-help-text" checked="" disabled="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-help-text" disabled="" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-help-text" disabled="" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-help-text" disabled="" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true,
  helpText: 'My help text',
  value: 'batman'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" checked="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  required: true,
  readonly: true,
  helpText: 'My help text',
  value: 'batman'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <strong>
            batman
          </strong>
          <slot></slot>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" checked="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="true" required="true" slot="label">
        <!---->
        <span class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
              <mg-icon icon="info-circle"></mg-icon>
            </mg-tooltip>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-on-top mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'label'
}: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 3`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 4`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 0 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 2 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio Should trigger events for items ({ items: [Array], selectedIndex: 3 }) with selectedIndex (%s) 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error message with locale: fr 1`] = `
<mg-input-radio lang="fr">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        Ce champ est obligatoire.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error message with locale: xx 1`] = `
<mg-input-radio lang="xx">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error with displayError component's public method 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio display error with displayError component's public method 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-help-text identifier-error" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio should display override error with setError component's public method 1`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio should display override error with setError component's public method 2`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio should display override error with setError component's public method 3`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio should display override error with setError component's public method 4`] = `
<mg-input-radio>
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_0" name="identifier" required="" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_1" name="identifier" required="" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_2" name="identifier" required="" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_3" name="identifier" required="" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="true" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        Override error
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--disabled mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-error" disabled="" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-error" disabled="" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-error" disabled="" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group mg-c-input__input-group--disabled">
          <input aria-describedby="identifier-error" disabled="" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;

exports[`mg-input-radio validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-radio patternerrormessage="Non">
  <mock:shadow-root>
    <mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error mg-c-input--radio mg-c-input--readonly" role="group">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <strong></strong>
          <slot></slot>
        </div>
      </mock:shadow-root>
      <ul class="mg-c-input__input-group-container" role="list">
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_0" name="identifier" type="radio" value="0">
          <label htmlfor="identifier_0">
            batman
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_1" name="identifier" type="radio" value="1">
          <label htmlfor="identifier_1">
            robin
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_2" name="identifier" type="radio" value="2">
          <label htmlfor="identifier_2">
            joker
          </label>
        </li>
        <li class="mg-c-input__input-group">
          <input aria-describedby="identifier-error" id="identifier_3" name="identifier" type="radio" value="3">
          <label htmlfor="identifier_3">
            bane
          </label>
        </li>
      </ul>
      <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
        <!---->
        <legend class="mg-c-input-title" id="identifier-title">
          <span class="mg-c-input-title__text">
            label
          </span>
        </legend>
      </mg-input-title>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
    </mg-input>
  </mock:shadow-root>
</mg-input-radio>
`;
